fix: make no results text align center

--- a/client/src/components/Header/components/SearchBar/components/SearchBox/SearchBox.module.scss
+++ b/client/src/components/Header/components/SearchBar/components/SearchBox/SearchBox.module.scss
@@ -7,6 +7,7 @@
 .search-box__no-results {
   @include flex-center;
   padding: 4rem 2rem;
+  text-align: center;
 }
 
 .seach-box__suggestions {
